--- a/app/src/main/res/layout/activity_register_.xml
+++ b/app/src/main/res/layout/activity_register_.xml
@@ -96,4 +96,18 @@
         app:layout_constraintTop_toBottomOf="@+id/log_button"
         app:layout_constraintVertical_bias="0.056" />
 
+    <Button
+        android:id="@+id/login_go_back"
+        android:layout_width="100dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="532dp"
+        android:layout_marginEnd="356dp"
+        android:layout_marginRight="356dp"
+        android:text="Back"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
