--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -105,7 +105,7 @@
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
         android:text="Retail"
-        app:layout_constraintBottom_toTopOf="@+id/to_ware"
+        app:layout_constraintBottom_toTopOf="@+id/to_ent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/to_pets" />
 
@@ -118,17 +118,17 @@
         android:layout_marginTop="3dp"
         android:text="Sports"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/to_ware" />
+        app:layout_constraintTop_toBottomOf="@+id/to_ent" />
 
     <Button
-        android:id="@+id/to_ware"
+        android:id="@+id/to_ent"
         android:layout_width="327dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="43dp"
         android:layout_marginLeft="43dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
-        android:text="Warehouse"
+        android:text="Entertainment"
         app:layout_constraintBottom_toTopOf="@+id/to_sports"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/to_retail" />
