--- a/app/src/main/res/layout/ent_layout.xml
+++ b/app/src/main/res/layout/ent_layout.xml
@@ -15,7 +15,7 @@
         android:layout_marginLeft="116dp"
         android:layout_marginTop="36dp"
         android:singleLine="true"
-        android:text="Warehouses"
+        android:text="Entertainment"
         android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,4 +31,14 @@
         android:text="@string/previous"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/dyn_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="25dp"
+        tools:layout_editor_absoluteY="138dp"
+        android:padding="60dp">></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
