--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.Categ_main">
 
     <TextView
-        android:id="@+id/textview_second"
+        android:id="@+id/Business_Name"
         android:layout_width="325dp"
         android:layout_height="52dp"
         android:layout_marginStart="40dp"
@@ -55,7 +55,7 @@
         android:text="Government"
         app:layout_constraintBottom_toTopOf="@+id/to_grocery"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_second" />
+        app:layout_constraintTop_toBottomOf="@+id/Business_Name" />
 
     <Button
         android:id="@+id/to_grocery"
