--- a/app/src/main/res/layout/groc_layout.xml
+++ b/app/src/main/res/layout/groc_layout.xml
@@ -8,14 +8,14 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     <TextView
-        android:id="@+id/textview_second"
+        android:id="@+id/Business_Name"
         android:layout_width="179dp"
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
         android:layout_marginLeft="116dp"
         android:layout_marginTop="36dp"
         android:singleLine="true"
-        android:text="Pet Stores"
+        android:text="Grocery and Pharmacy"
         android:textAllCaps="true"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
