--- a/app/src/main/res/layout/sport_layout.xml
+++ b/app/src/main/res/layout/sport_layout.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     <TextView
-        android:id="@+id/textview_second"
+        android:id="@+id/Business_Name"
         android:layout_width="179dp"
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
