--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -8,15 +8,14 @@
 
     <TextView
         android:id="@+id/textview_first"
-        android:layout_width="373dp"
-        android:layout_height="112dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
+        android:layout_width="412dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="240dp"
+        android:layout_marginBottom="178dp"
         android:text="Welcome to the Covid Coders App"
-        android:textSize="24sp"
+        android:textAllCaps="true"
+        android:textSize="23sp"
+        app:layout_constraintBottom_toTopOf="@+id/to_Categ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,43 +23,34 @@
 
     <Button
         android:id="@+id/to_Categ"
-        android:layout_width="176dp"
-        android:layout_height="69dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
-        android:layout_marginBottom="188dp"
+        android:layout_width="412dp"
+        android:layout_height="240dp"
         android:text="Categories"
         android:textSize="17sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/to_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/to_login"
-        android:layout_width="123dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginRight="40dp"
+        android:layout_width="202dp"
+        android:layout_height="200dp"
         android:text="Login"
         android:textSize="17sp"
-        app:layout_constraintEnd_toStartOf="@+id/register_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/to_Categ"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/register_button"
-        android:layout_width="123dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
+        android:layout_width="202dp"
+        android:layout_height="200dp"
         android:text="Register"
         android:textSize="17sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/to_login"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.996"
+        app:layout_constraintStart_toEndOf="@+id/to_Categ" />
 </androidx.constraintlayout.widget.ConstraintLayout>
