--- a/app/src/main/res/layout/activity_register_.xml
+++ b/app/src/main/res/layout/activity_register_.xml
@@ -8,10 +8,12 @@
 
     <TextView
         android:id="@+id/LogName"
-        android:layout_width="wrap_content"
+        android:layout_width="260dp"
         android:layout_height="wrap_content"
         android:text="Registration"
-        android:textSize="25sp"
+        android:gravity="center"
+        android:textAlignment="gravity"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -23,6 +25,8 @@
         android:id="@+id/create_nam"
         android:layout_width="139dp"
         android:layout_height="20dp"
+        android:gravity="center"
+        android:textAlignment="gravity"
         android:text="Register New Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -88,6 +92,7 @@
         android:id="@+id/log_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Already Registered? Login Here"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
