--- a/app/src/main/res/layout/beauty_layout.xml
+++ b/app/src/main/res/layout/beauty_layout.xml
@@ -9,15 +9,19 @@
 
     <TextView
         android:id="@+id/Business_Name"
-        android:layout_width="240dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="580dp"
+        android:layout_width="390dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="500dp"
         android:singleLine="true"
-        android:text="Hair and Beauty"
         android:textAllCaps="true"
-        android:textSize="24sp"
+        android:gravity="center"
+        android:text="Hair and beauty salon"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="32sp"
+        android:textAlignment = "gravity"
+        app:autoSizeMaxTextSize="?android:attr/windowTitleSize"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
