--- a/app/src/main/res/layout/ent_layout.xml
+++ b/app/src/main/res/layout/ent_layout.xml
@@ -9,15 +9,19 @@
 
     <TextView
         android:id="@+id/Business_Name"
-        android:layout_width="179dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="260dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="500dp"
         android:singleLine="true"
-        android:text="Entertainment"
         android:textAllCaps="true"
-        android:textSize="24sp"
+        android:gravity="center"
+        android:text="Entertainment"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="32sp"
+        android:textAlignment = "gravity"
+        app:autoSizeMaxTextSize="?android:attr/windowTitleSize"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
