--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -9,12 +9,14 @@
     <TextView
         android:id="@+id/textview_first"
         android:layout_width="412dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="240dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="120dp"
         android:layout_marginBottom="178dp"
-        android:text="Welcome to the Covid Coders App"
+        android:text="Business Covid Database"
+        android:gravity="center"
+        android:textAlignment="gravity"
         android:textAllCaps="true"
-        android:textSize="23sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/to_Categ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -25,8 +27,12 @@
         android:id="@+id/to_Categ"
         android:layout_width="412dp"
         android:layout_height="240dp"
-        android:text="Categories"
-        android:textSize="17sp"
+        android:background="#FFFFFF"
+        android:gravity="center"
+        android:text="Select Buisness type"
+        android:textAlignment="gravity"
+        android:textAllCaps="true"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/to_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,7 +43,10 @@
         android:layout_width="202dp"
         android:layout_height="200dp"
         android:text="Login"
-        android:textSize="17sp"
+        android:gravity="center"
+        android:textAlignment="gravity"
+        android:textAllCaps="true"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/to_Categ"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,7 +57,10 @@
         android:layout_width="202dp"
         android:layout_height="200dp"
         android:text="Register"
-        android:textSize="17sp"
+        android:gravity="center"
+        android:textAlignment="gravity"
+        android:textAllCaps="true"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.996"
