--- a/app/src/main/res/layout/pets_layout.xml
+++ b/app/src/main/res/layout/pets_layout.xml
@@ -7,18 +7,23 @@
     android:layout_height="match_parent">
     xmlns:tools="http://schemas.android.com/tools"
 
+
     <TextView
         android:id="@+id/Business_Name"
-        android:layout_width="180dp"
-        android:layout_height="118dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginTop="580dp"
+        android:layout_width="190dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="500dp"
         android:singleLine="true"
         android:text="Pet Stores"
+        android:textAlignment="gravity"
         android:textAllCaps="true"
-        android:textSize="24sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textSize="32sp"
+        app:autoSizeMaxTextSize="?android:attr/windowTitleSize"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:gravity="center"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
